# postfga

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  ARCHITECTURE.md  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DEPLOYMENT.md  DEVELOPMENT.md  FINAL_SUMMARY.md  GETTING_STARTED.md  GRPC_CLIENT_GUIDE.md  GRPC_QUICKSTART.md  IMPLEMENTATION_CHECKLIST.md  INSTALLATION_AND_TESTING.md  LATCH_IMPLEMENTATION_COMPLETE.md  LATCH_MECHANISM.md  MULTIPROCESS_SAFETY_ANALYSIS.md  Makefile  PROJECT_COMPLETE_INDEX.md  PROJECT_SUMMARY.md  PROTOBUF_GUIDE.md  PROTO_SETUP_SUMMARY.md  QUEUE_SAFETY_SUMMARY.md  QUICK_FIX_GUIDE.md  README.md  README_FIRST.md  RING_BUFFER_QUEUE.md  TASK_COMPLETION_SUMMARY.md  TESTING.md  Taskfile.yaml  VSCode_CONFIG_VALIDATION.md  buf.gen.yaml  build.sh  compile_commands.events.json  initdb-database.sh  initdb-postfga.sh  (+1 more)
.claude/: settings.local.json
.devcontainer/: devcontainer.json  devcontainer.json.txt
api/google/api/: annotations.pb.cc  client.pb.cc  field_behavior.pb.cc  field_info.pb.cc  http.pb.cc  httpbody.pb.cc  launch_stage.pb.cc  resource.pb.cc  visibility.pb.cc
api/google/api/expr/v1alpha1/: checked.pb.cc  eval.pb.cc  explain.pb.cc  syntax.pb.cc  value.pb.cc
api/google/api/expr/v1beta1/: decl.pb.cc  eval.pb.cc  expr.pb.cc  source.pb.cc  value.pb.cc
api/google/bytestream/: bytestream.grpc.pb.cc  bytestream.grpc.pb.h  bytestream.pb.cc  bytestream.pb.h
api/google/geo/type/: viewport.grpc.pb.cc  viewport.grpc.pb.h  viewport.pb.cc  viewport.pb.h
api/google/longrunning/: operations.grpc.pb.cc  operations.grpc.pb.h  operations.pb.cc  operations.pb.h
api/google/rpc/: code.pb.cc  error_details.pb.cc  status.pb.cc
api/google/rpc/context/: attribute_context.pb.cc
api/google/type/: calendar_period.grpc.pb.cc  calendar_period.grpc.pb.h  calendar_period.pb.cc  color.grpc.pb.cc  color.grpc.pb.h  color.pb.cc  color.pb.h  date.grpc.pb.cc  date.grpc.pb.h  date.pb.cc  date.pb.h  datetime.grpc.pb.cc  datetime.grpc.pb.h  datetime.pb.cc  dayofweek.grpc.pb.cc  dayofweek.grpc.pb.h  dayofweek.pb.cc  decimal.grpc.pb.cc  decimal.grpc.pb.h  decimal.pb.cc  decimal.pb.h  expr.grpc.pb.cc  expr.grpc.pb.h  expr.pb.cc  expr.pb.h  fraction.grpc.pb.cc  fraction.grpc.pb.h  fraction.pb.cc  fraction.pb.h  interval.grpc.pb.cc  interval.grpc.pb.h  interval.pb.cc  interval.pb.h  latlng.grpc.pb.cc  latlng.grpc.pb.h  latlng.pb.cc  latlng.pb.h  localized_text.grpc.pb.cc  localized_text.grpc.pb.h  localized_text.pb.cc  (+24 more)
api/openfga/v1/: authzmodel.grpc.pb.cc  authzmodel.grpc.pb.h  authzmodel.pb.cc  authzmodel.pb.h  errors_ignore.grpc.pb.cc  errors_ignore.grpc.pb.h  errors_ignore.pb.cc  errors_ignore.pb.h  openapi.grpc.pb.cc  openapi.grpc.pb.h  openapi.pb.cc  openapi.pb.h  openfga.grpc.pb.cc  openfga.grpc.pb.h  openfga.pb.cc  openfga.pb.h  openfga_service.grpc.pb.cc  openfga_service.grpc.pb.h  openfga_service.pb.cc  openfga_service.pb.h  openfga_service_consistency.grpc.pb.cc  openfga_service_consistency.grpc.pb.h  openfga_service_consistency.pb.cc  openfga_service_consistency.pb.h
api/protoc-gen-openapiv2/options/: annotations.grpc.pb.cc  annotations.grpc.pb.h  annotations.pb.cc  annotations.pb.h  openapiv2.grpc.pb.cc  openapiv2.grpc.pb.h  openapiv2.pb.cc  openapiv2.pb.h
api/validate/: validate.grpc.pb.cc  validate.grpc.pb.h  validate.pb.cc
cmake/: asio.cmake  grpc.cmake  openfga.cmake  postgresql.cmake  protobuf.cmake
docker/: .env.example  Dockerfile  Dockerfile.db  Taskfile.yaml  docker-compose.dev.yml  docker-compose.yml
docker/init-scripts/: 01-create-extension.sh
docker/initdb.d/: 01-setup-extension.sql  20-postfga.sql
docs/: FORMATTING.md
include/: grpc_client.h  postfga_shmem.hpp  shared_memory.h.txt
scripts/: bench.sql  buf-docker.sh  build_docker.sh  format-all.sh  init_postgres.sh  install_and_test.sh  install_extension.sh  postfga_check.sql  postfga_init.sql  postfga_write.sql  test_docker.sh
sql/: postfga--1.0.0.sql  postfga.control  test_queue.sql
src/: backend_request.c  bgw.c  bgw.c.txt  bgw.h.txt  cache.c  cache.h  cache_key.h  cache_l1.h  cache_l2.h  cache_shmem.c  cache_shmem.h  channel.c  channel.c.txt  channel.h  channel.h.txt  channel_queue.h  channel_queue.h.txt  channel_shmem.c  channel_shmem.h  channel_slot.c.txt  channel_slot.h  channel_slot.h.txt  channel_stream.h.txt  check_channel.c  check_channel.h  check_queue.h  check_shmem.c  check_shmem.h  check_slot.h  client.cpp  client.h  common.h  config.c  config.h  fdw.h  fga_request_slot.h  fga_type.h  func_check.c  func_check.h  func_config.c  (+30 more)
src/bgw/: bgw.c  bgw.h  main.cpp  main.h  processor.cpp  processor.hpp  queue.hpp  task_slot.hpp  worker.cpp  worker.hpp
src/client/: channel_factory.cpp  channel_factory.hpp  client.cpp  client.hpp  client_factory.cpp  client_factory.hpp  config.hpp  factory.cpp  factory.hpp  openfga.cpp  openfga.hpp  openfga_client.cpp  openfga_client.hpp  openfga_client_check.cpp  openfga_client_store.cpp  openfga_client_write.cpp  openfga_handler.cpp  openfga_handler.hpp  openfga_handler_check.cpp  openfga_handler_store.cpp  openfga_handler_write.cpp  openfga_util.cpp  request.h  request_variant.cpp  request_variant.hpp  response.h
src/config/: config.cpp  config.hpp  grpc.hpp  load.cpp  load.hpp  retry.hpp
src/fdw/: exec.c  fdw.c  fdw.h  handler.c  options.c  plan.c  schema.c  validator.c
src/util/: counter.cpp  counter.hpp  logger.cpp  logger.hpp
tests/: Makefile  README.md  README_TEST.md  README_TESTING.md  TESTING_SUMMARY.md  run_tests.sh  test_client.c  test_extension.sql  test_framework.md  test_grpc_client.c  test_guc.c  test_helpers.h  test_queue.c
tests/sql/: guc_pgtap_test.sql  guc_test.sql
